--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~45.0.0",
-    "expo-status-bar": "~1.3.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "expo": "^45.0.0",
+    "expo-font": "~10.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-on-layout": "^2.0.2",
+    "react-native-svg": "12.3.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
