--- a/app.json
+++ b/app.json
@@ -1,29 +1,37 @@
 {
   "expo": {
-    "name": "VirtualDice",
+    "name": "Virtual Dice",
     "slug": "VirtualDice",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "backgroundColor": "#950000"
+    },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
-    },
     "android": {
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "virtualdice.apk"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "sdkVersion": "45.0.0"
+    "sdkVersion": "45.0.0",
+    "extra": {
+      "eas": {
+        "projectId": "dc96bff7-311a-4ac4-8fef-44a029d6351a"
+      }
+    }
   },
   "name": "virtualdice"
 }
