--- a/app.json
+++ b/app.json
@@ -2,7 +2,15 @@
   "expo": {
     "slug": "virtualdice",
     "name": "virtualdice",
-    "sdkVersion": "45.0.0"
+    "sdkVersion": "45.0.0",
+    "extra": {
+      "eas": {
+        "projectId": "b93e4643-5cc1-46aa-8c27-35cce8c21153"
+      }
+    },
+    "android": {
+      "package": "com.killroy.virtualdice"
+    }
   },
   "name": "virtualdice"
 }
