--- a/app.json
+++ b/app.json
@@ -1,16 +1,36 @@
 {
   "expo": {
+    "name": "Virtual Dice",
     "slug": "VirtualDice",
-    "name": "virtualdice",
+    "version": "3.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "backgroundColor": "#950000"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "android": {
+      "versionCode": 3,
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#FFFFFF"
+      },
+      "package": "virtualdice.apk"
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
+    },
     "sdkVersion": "45.0.0",
     "extra": {
       "eas": {
         "projectId": "dc96bff7-311a-4ac4-8fef-44a029d6351a"
       }
-    },
-    "android": {
-      "versionCode": 2,
-      "package": "virtualdice.apk"
     }
   },
   "name": "virtualdice"
